sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value i
	if (plusPetit(i,j)==true){
                      ^AlgBubbleSort1:6: error: not found: value i
		echange(i,j)
                        ^