sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

while(true){
	if (plusPetit(i,j)==true){
		echange(i,j)
	}

}
}
